--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<h1 id ="title">Tell Me About Samouraï</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+
+  </head>
+
+  <body>
+    <h1 id ="title">Tell Me About Samouraï</h1>
+    <p id="description">This is a survey where you can tell us what you know about Samouraï</p>
+    <form id="survey-form">
+      Name: <input type="text" name="name" id="name" required></input></br>
+      Email: <input type="email" name="email" id="email" required></input></br>
+      Number: <input type="number" name="number" id="number" required></input></br>
+      <input type="submit"></br>
+    </form>
+  </body>
+<html>
