--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
       <input type="checkbox" name="class2" value="Daimyo"> I am a Daimyo</br>
       <input type="checkbox" name="class3" value="Shogun"> I am a Shogun</br>
 
-      <input type="submit"></br>
+      <textarea placeholder="additional comments"></textarea></br>
+
+      <input type="submit" id="submit">
     </form>
   </body>
 <html>
