--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <label id="number-label">Number:</label>
       <input type="number" name="number" id="number" min="0" max="10" placeholder="$" required></input></br>
 
-      <h2>What kinf of warrior are you ?</h2>
+      <h2>What kind of weapon are you ?</h2>
       <select id="dropdown" name="saber">
         <option value="Katana">Katana</option>
         <option value="Wakisashi">Wakisashi</option>
